Updated UI components

--- a/src/main/resources/frontend/redditclone-angular-app/src/app/auth/login/login.component.css
+++ b/src/main/resources/frontend/redditclone-angular-app/src/app/auth/login/login.component.css
@@ -1,5 +1,12 @@
 .login-section {
-  margin: 100px;
+  background: url("../../../assets/redditbackground.jpg") no-repeat center
+    center fixed;
+  min-height: 800px;
+  min-width: 1000px;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
 .login-failed,
