--- a/src/main/resources/frontend/redditclone-angular-app/src/app/auth/login/login.component.html
+++ b/src/main/resources/frontend/redditclone-angular-app/src/app/auth/login/login.component.html
@@ -1,15 +1,15 @@
-<div class="container" style="background: url('../../../assets/redditbackground.jpg');">
 <div class="login-section">
   <div class="row justify-content-center">
       <div class="col-md-3"></div>
-      <div class="col-md-6">
-          <div class="card">
+      <div class="col-md-8">
+          <div class="card text-center" style="margin-top: 10px; width: 500px; ">
               <div class="card-body">
                 <h4>Login</h4>
                 <br>
                 <form [formGroup]="loginForm" (ngSubmit)="login()">
                    <div class="form-group row">
-                        <div class="col-md-9">
+                     <div class="col-md-2"></div>
+                        <div class="col-md-8">
                               <input type="text"
                                      id="user_name"
                                      class="form-control"
@@ -26,22 +26,27 @@
                       </div>
 
                       <div class="form-group row">
-                          <div class="col-md-9">
+                        <div class="col-md-2"></div>
+                          <div class="col-md-8">
                               <input type="password" id="password" class="form-control" [formControlName]="'password'" name="password" required placeholder="PASSWORD">
                               <span *ngIf="!loginForm.get('password').valid && loginForm.get('password').touched">
                                 Password cannot be empty
                               </span>
                           </div>
                       </div>
-
-                      <div class="col-md-9 ">
-                          <button type="submit" class="btn btn-primary btn-lg btn-block rounded-pill login" style="width: 270px; height: 40px; padding-left: 0px;">
+                      <div class="form-group row">
+                        <div class="col-md-2"></div>
+                      <div class="col-md-8">
+                          <button type="submit" class="btn btn-primary btn-lg btn-block rounded-pill login" style="width: 300px; height: 40px;">
                               Login
                           </button>
                       </div>
-                      <br>
-                      <div class="col-md-9">
-                        <span>New to Reddit? <a routerLink="/signup">SIGN UP</a></span>
+                      </div>
+                      <div class="form-group row">
+                        <div class="col-md-2"></div>
+                      <div class="col-md-8">
+                        <span>New to Reddit? <a routerLink="/signup" style="color: #0079d3;cursor: pointer;"><b>SIGN UP</b></a></span>
+                      </div>
                       </div>
                       <div class="login-failed" *ngIf='this.isError'>
                            <p class="login-failed-text">Login Failed. Please check your credentials and try again.</p>
@@ -55,5 +60,4 @@
       </div>
       <div class="col-md-3"></div>
   </div>
-</div>
 </div>
