--- a/src/main/resources/frontend/redditclone-angular-app/src/app/auth/sign-up/sign-up.component.html
+++ b/src/main/resources/frontend/redditclone-angular-app/src/app/auth/sign-up/sign-up.component.html
@@ -1,19 +1,17 @@
 <div class="register-section">
   <div class="row justify-content-center">
       <div class="col-md-3"></div>
-      <div class="col-md-6">
-          <div class="card">
-              <div class="card-header" style="text-align: center">
-                  <h4>Register</h4>
-              </div>
-              <div class="card-body">
+      <div class="col-md-8">
+          <div class="card text-center" style="margin-top: 10px; width: 500px;" >
+              <div class="card-body" >
+                <h4>Sign Up</h4>
+                <br>
                   <form [formGroup]="signupForm" (ngSubmit)="signup()">
                       <div class="form-group row">
-                          <label for="email_address" class="col-md-4 col-form-label text-md-right">E-Mail
-                              Address</label>
-                          <div class="col-md-6">
+                          <div class="col-md-2"></div>
+                          <div class="col-md-8">
                               <input type="text" [formControlName]="'email'" id="email_address" class="form-control" name="email-address" required
-                                  autofocus>
+                                  autofocus placeholder="EMAIL">
                               <span *ngIf="!signupForm.get('email').valid && signupForm.get('email').touched">
                                   Please provide a valid email
                               </span>
@@ -21,9 +19,9 @@
                       </div>
 
                       <div class="form-group row">
-                          <label class="col-md-4 col-form-label text-md-right">User Name</label>
-                          <div class="col-md-6">
-                              <input type="text" [formControlName]="'username'"class="form-control" required autofocus>
+                         <div class="col-md-2"></div>
+                          <div class="col-md-8">
+                              <input type="text" [formControlName]="'username'"class="form-control" required autofocus placeholder="USERNAME">
                               <span *ngIf="!signupForm.get('username').valid && signupForm.get('username').touched">
                                   Please provide a valid username
                               </span>
@@ -31,21 +29,29 @@
                       </div>
 
                       <div class="form-group row">
-                          <label for="password" class="col-md-4 col-form-label text-md-right">Password</label>
-                          <div class="col-md-6">
-                              <input type="password" [formControlName]="'password'" id="password" class="form-control" name="password" required>
+                         <div class="col-md-2"></div>
+                          <div class="col-md-8">
+                              <input type="password" [formControlName]="'password'" id="password" class="form-control" name="password" required placeholder="PASSWORD">
                               <span *ngIf="!signupForm.get('password').valid && signupForm.get('password').touched">
                                   Please provide a valid Password
                               </span>
                           </div>
                       </div>
 
-                      <span class="col-md-6 offset-md-4">
-                          <button type="submit" class="sign-up">
+                      <div class="form-group row">
+                        <div class="col-md-2"></div>
+                      <div class="col-md-8">
+                          <button type="submit" class="btn btn-primary btn-lg btn-block rounded-pill sign-up" style="width: 300px; height: 40px;">
                               Sign Up
                           </button>
-                          <span style="padding-left: 15px">Existing user? <a routerLink="/login">Log In</a></span>
-                      </span>
+                        </div>
+                      </div>
+                      <div class="form-group row">
+                        <div class="col-md-2"></div>
+                      <div class="col-md-8">
+                          <span style="padding-left: 15px">Existing user? <a routerLink="/login"style="color: #0079d3;cursor: pointer;"><b>LOG IN</b></a></span>
+                      </div>
+                      </div>
                   </form>
               </div>
           </div>
