--- a/src/main/resources/frontend/redditclone-angular-app/src/app/auth/user-component/user-component.component.html
+++ b/src/main/resources/frontend/redditclone-angular-app/src/app/auth/user-component/user-component.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div>
+  <div style="margin-top:20px">
     Welcome <b>{{name}}</b>.<br /> You have posted <b>{{postLength}}</b> time(s) and commented
     <b>{{commentLength}}</b> time(s).
     You can check your post and comment history below.
