--- a/src/main/resources/frontend/redditclone-angular-app/src/app/header/header.component.css
+++ b/src/main/resources/frontend/redditclone-angular-app/src/app/header/header.component.css
@@ -96,3 +96,42 @@ header {
   max-height: 24px;
   max-width: 24px;
 }
+
+.checkbox {
+  opacity: 0;
+  position: absolute;
+}
+
+.label {
+  background-color: #dfe6e9;
+  border-radius: 50px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 2px;
+  position: absolute;
+  height: 22px;
+  width: 40px;
+  transform: scale(1);
+}
+
+.label .ball {
+  background-color: #fff;
+  border-radius: 50%;
+  position: absolute;
+  top: 2px;
+  left: 2px;
+  height: 18px;
+  width: 18px;
+  transform: translateX(0px);
+  transition: transform 0.2s linear;
+}
+
+.checkbox:checked + .label .ball {
+  transform: translateX(20px);
+}
+
+.fa-sun {
+  color: #f39c12;
+}
